finalizando el trabajo

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
       <h1>Defilippi Maria Antonella</h1>
     </header>
     <main>
+      <!-- Sección "Sobre Mí" -->
       <section id="sobre-mi">
         <h2>Sobre Mi</h2>
         <div class="personal">
-          <img src="./assets/foto-personal-.jpg" alt="Mi foto" />
+          <img src="./assets/foto-personal.jpg" alt="Mi foto" />
           <p>
             ¡Hola! Soy Defilippi Maria Antonella. Me apasiona el desarrollo web
             y la creación de experiencias digitales que sean tanto atractivas
@@ -25,23 +26,26 @@
           </p>
         </div>
       </section>
+      <!-- Sección "Mis Tecnologías Favoritas" -->
       <section id="mis-tecnologias">
         <h2>Mis Tecnologías Favoritas</h2>
         <div class="tarjeta">
           <h2>Html</h2>
-          <img src="./assets/Image20240308163700.png" alt="Tecnología 1" />
+          <img src="./assets/imagen-html.png" alt="Tecnología 1" />
         </div>
         <div class="tarjeta">
           <h2>Css</h2>
-          <img src="./assets/Image20240308163641.png" alt="Tecnología 2" />
+          <img src="./assets/imagen-css.png" alt="Tecnología 2" />
         </div>
         <div class="tarjeta">
           <h2>Javascript</h2>
-          <img src="./assets/Image20240308163603.png" alt="Tecnología 3" />
+          <img src="./assets/imagen-javascrips.png" alt="Tecnología 3" />
         </div>
       </section>
+      <!-- Sección "Mis Actividades Favoritas" -->
       <section id="favorite-activities">
         <h2>Mis Actividades Favoritas</h2>
+        <!-- Formulario para agregar actividades -->
         <form id="formulario">
           <input type="text" id="input-title" placeholder="Título" required />
           <input
